--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "firebase-admin": "^11.2.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.25.2",
